test/tests/compiler/16_characters_and_strings/valid/strings_as_initializers/simple.plx
pub fn main(none) i32 {
    #  simple test of initializing and subscripting char array
    chars: [4]u8 = "abc"
    return chars[2]
}
